k3s/apps/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
